@@ -10,9 +10,13 @@ Recipe:
  - Run "make" to get a list of available targets.
  - Build an image using one of the build_ targets (build_netboot,
    build_all, etc).
- - Look in dest/, and boot your new floppy, netboot image, hd-media
-   image, or mini iso. (Mini isos are created by make build_netboot,
-   only on i386 for now.)
+ - Look in dest/ for the completed images.
+ 
+Note that this does not create full debian ISO images; that is left to the
+debian-cd package. As a shortcut, you can create a mini-ISO image, with
+only the netboot initrd on it. make build_netboot will create a
+dest/netboot/mini.iso, using isolinux. Any size initrd can be placed on
+this ISO, which may be useful for testing.
  
 A more detailed overview of how the installer is built:
 
