@@ -67,10 +67,8 @@ TEMP_BOOT = $(TEMP)/boot.img
 TEMP_ROOT = $(TEMP)/root.img
 TEMP_MINIISO = $(TEMP)/mini.iso
 TEMP_EXTRA = $(TEMP)/$(EXTRANAME).img
-TEMP_DEBIAN_CD_INFO = $(TEMP)/debian_cd_info
-
-# Used for building cd images.
-CD_IMAGE_TREE = $(TEMP)/cd_image_tree
+TEMP_BOOT_SCREENS = $(TEMP)/boot_screens
+TEMP_CD_TREE = $(TEMP)/cd_tree
 
 DPKGDIR = $(TREE)/var/lib/dpkg
 
