@@ -1,9 +1,5 @@
 MEDIA_TYPE = netboot image
 
-# How big a floppy image should I make? (in kilobytes)
-# Needed for the MINIISO.
-FLOPPY_SIZE = 2880
-
 TARGET = $(INITRD) $(KERNEL) $(MINIISO)
 EXTRANAME = $(MEDIUM)/
 
