@@ -28,7 +28,7 @@ debian-installer (20040204) UNRELEASED; urgency=low
     - Document vga=771 option for laptops with display problems.
       Closes: #229904
     - Add syslinux splash image by Matthew A. Nicholson, and another by
-      Klowner.
+      Klowner, and still another by Volkan YAZICI.
     - Make all the syslinux help screens leave graphics mode when displayed.
     - Hack syslinux.txt so it all fits on one line, the same line as the boot:
       prompt.
@@ -46,6 +46,7 @@ debian-installer (20040204) UNRELEASED; urgency=low
       dest/netboot/mini.iso that behaves the same as a netboot would.
     - Add a dest/cdrom/debian-cd_info.tar.gz with the syslinux screens
       and splash image, for eventual use by debian-cd.
+    - Convert the miniiso to use isolinux, to support any size initrd.
   * Richard Hirst
     - ia64: Fix cdrom to autoboot, and tidy up kernel params.  Partial
       fix for 227114.
